# VocTool

./: CMakeLists.txt  LICENSE.txt  README.adoc  README.md  build.sh  playvoc.sh
.github/workflows/: cmake-multi-platform.yml
src/: command_line_parser.h  compare_audio.cpp  compare_audio.h  decode_creative_adpcm.h  decode_main.cpp  detect_file_format.cpp  detect_file_format.h  encode_creative_adpcm.cpp  encode_creative_adpcm.h  encode_creative_adpcm_neon.cpp  encode_creative_adpcm_neon.h  encode_creative_adpcm_simd.cpp  encode_creative_adpcm_simd.h  file_tools.cpp  file_tools.h  main.cpp  read_wave.cpp  read_wave.h  resampling.cpp  resampling.h  voc_format.cpp  voc_format.h  write_wave.cpp  write_wave.h
src/test/: catch_importer.h.in  detect_file_format_test.cpp  resampling_test.cpp  test_helper.h  voc_format_test.cpp
testdata/: 16bit_mono_48000.raw  24bit_mono_44100.raw  32bit_float_mono_48000.raw  jetpack.voc  jetpack_adpcm4.voc  jetpack_adpcm4_decoded.raw  jetpack_decoded.raw
